1. log 现在能够记录对象内容了，以及两个调试用log函数 2. nat 穿透服务器端已经接近完成 3. nat 穿透客户端需要努力啊喵！ 4. 临时添加了 underscore ，不过看情况可能会删除引用吧喵？
Signed-off-by: Kouga <ncwhale@gmail.com>

--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "coffee app.coffee"
+    "start": "coffee client.coffee"
   },
   "dependencies": {
-    "coffee-script": "*"
+    "coffee-script": "*",
+    "underscore": "*"
   }
 }
